--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sass": "^1.77.6",
     "ytdl-core": "^4.11.5"
   },
