--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "sass": "^1.77.6",
+    "sweetalert2": "^11.12.2",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
