--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^5.16.0",
+    "@types/uuid": "^10.0.0",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.3",
     "next": "14.2.4",
@@ -21,6 +22,8 @@
     "react-icons": "^5.2.1",
     "sass": "^1.77.6",
     "sweetalert2": "^11.12.2",
+    "uuid": "^11.1.0",
+    "youtube-dl-exec": "^3.0.20",
     "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
